--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "download-metadata": "ts-node --log-error ./src/index.ts download-metadata",
     "update": "ts-node --log-error ./src/index.ts update",
+    "get-mint-addresses": "ts-node --log-error ./src/index.ts get-mint-addresses",
     "ts-node": "ts-node",
     "lint": "eslint 'src/**/*.{js,ts}' --fix",
     "build": "tsc -p .",
@@ -17,7 +18,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@metaplex-foundation/mpl-token-metadata": "^1.2.0",
     "@solana/web3.js": "^1.29.2",
+    "axios": "^0.25.0",
     "borsh": "^0.6.0",
     "bs58": "^4.0.1",
     "commander": "^8.2.0"
